# ai-sop

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  interface.py  ml_system_design_doc  ml_system_design_doc.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
data/: store_sales.csv  store_sales.xlsx  store_sales_2.csv  store_sales_dates.csv  store_sales_dates.xlsx
data/rag/: text_loader.py  text_processing.py
data/rag/common/: prompts.py
notebooks/: data_loader.ipynb  example.ipynb
src/data/: loading.py  split.py
src/features/: feature_engineering.py
src/model/: catboost.py
