[tool.poetry]
name = "ai-sop"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
openpyxl = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
