[tool.poetry]
name = "ai-sop"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
openpyxl = "^3.1.4"
catboost = "^1.2.5"
numpy = "1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
streamlit = "^1.36.0"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
